[tool.poetry]
name = "weathercheckerproject"
version = "0.1.0"
description = ""
authors = ["Natalie Shagug <natysh343@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
